crates/pina_macros/tests/ui/fail/instruction_tuple_struct.stderr
error: Instruction structs must have named fields
 --> tests/ui/fail/instruction_tuple_struct.rs:8:1
  |
8 | #[instruction(discriminator = InstructionKind, variant = TupleInstruction)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `instruction` (in Nightly builds, run with -Z macro-backtrace for more info)
